Correct profile image alignment

--- a/sass/fields.scss
+++ b/sass/fields.scss
@@ -126,6 +126,8 @@
     display: inline;
     margin: 0;
     width: 16px;
+    position: relative;
+    bottom: -0.1em;
   }
 }
 
